--- a/package.json
+++ b/package.json
@@ -1,25 +1,24 @@
 {
-  "name": "fisheyegl",
-  "version": "0.2.0",
-  "description": "A JavaScript library for correcting fisheye, or barrel distortion, in images in the browser with WebGL -- adapted from fisheye-correction-webgl by @bluemir.",
+  "name": "fisheyegl-video",
+  "version": "0.1.0",
+  "description": "A JavaScript library for correcting fisheye, or barrel distortion, in videos in the browser with WebGL",
   "main": "src/fisheyegl.js",
   "scripts": {},
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/jywarren/fisheyegl.git"
+    "url": "git+https://github.com/Infl1ght/fisheyegl-video.git"
   },
   "keywords": [
     "images",
     "distortion",
     "lenses",
     "barrel distortion",
-    "Public Lab",
     "fisheye"
   ],
   "author": "Public Lab",
   "license": "GPL-3.0",
   "bugs": {
-    "url": "https://github.com/jywarren/fisheyegl/issues"
+    "url": "https://github.com/Infl1ght/fisheyegl-video/issues"
   },
   "dependencies": {},
   "devDependencies": {
@@ -27,5 +26,5 @@
     "grunt-browserify": "^5.0.0",
     "grunt-replace": "^1.0.1"
   },
-  "homepage": "https://github.com/jywarren/fisheyegl"
+  "homepage": "https://github.com/Infl1ght/fisheyegl-video"
 }
